http. address for debian repo is not working correctly. Trying cdn.

--- a/ltfhc-couch/Dockerfile
+++ b/ltfhc-couch/Dockerfile
@@ -2,6 +2,8 @@ FROM debian:wheezy
 
 MAINTAINER Jun Matsushita jun@iilab.org
 
+ADD source.list /etc/apt/sources.list
+
 RUN apt-get update && apt-get install -y build-essential wget curl
 
 # erlang and couch deps
