--- a/ltfhc-couch/Dockerfile
+++ b/ltfhc-couch/Dockerfile
@@ -4,7 +4,9 @@ MAINTAINER Jun Matsushita jun@iilab.org
 
 ADD sources.list /etc/apt/sources.list
 
-RUN apt-get update && apt-get install -y build-essential wget curl
+RUN apt-get install debian-archive-keyring && apt-get update
+
+RUN apt-get install -y build-essential wget curl
 
 # erlang and couch deps
 RUN apt-get install -y erlang-base-hipe \
