Couchdb seems to install and run now but SSSL doesn't seem to work

--- a/ltfhc-couch/Dockerfile
+++ b/ltfhc-couch/Dockerfile
@@ -38,6 +38,7 @@ RUN (mkdir /tmp/mon && cd /tmp/mon && curl -L# https://github.com/visionmedia/mo
 
 ADD ./opt /opt
 
+RUN apt-get install -y adduser
 # Configuration
 RUN sed -e 's/^bind_address = .*$/bind_address = 0.0.0.0/' -i /usr/local/etc/couchdb/default.ini
 RUN /opt/couchdb-config
@@ -45,15 +46,17 @@ RUN /opt/couchdb-config
 RUN apt-get update && apt-get install -y curl libev4 libssl-dev libev-dev
 RUN (mkdir /tmp/stud && cd /tmp/stud && curl -L# https://github.com/bumptech/stud/archive/master.tar.gz | tar zx --strip 1 && make && make install && rm -rf /tmp/stud)
 
+RUN apt-get install -y sudo
+
 # cleanup
 RUN apt-get remove -y curl && \
  apt-get autoremove -y && apt-get clean -y && \
  rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
-ADD stud.conf /usr/local/etc/stud/
-ADD generate-pem /root/
-ADD start /opt/
-ADD stud-config /opt/
+ADD ./opt/stud.conf /usr/local/etc/stud/
+ADD ./opt/generate-pem /root/
+ADD ./opt/start /opt/
+ADD ./opt/stud-config /opt/
 
 RUN ./root/generate-pem
 RUN ./opt/stud-config
